- https://github.com/eclipse-syson/syson/issues/581[#581] [interconnection-view] Add documentation and action flow compartment in ActionUsage

=== New features

- https://github.com/eclipse-syson/syson/issues/553[#553] [diagrams] Add "Show/Hide Icons in Diagrams" action in Diagram Panel, allowing to show/hide icons in diagrams (icons are not part of the SysMLv2 specification).


== v2024.7.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/298[#298] [syson] Add standard libraries and new models now have a root Namespace to conform with KerML/SysML specifications.
- https://github.com/eclipse-syson/syson/issues/334[#334] [diagrams] Generalization of StateTransition descriptions.
  * Rename `AbstractDiagramDescriptionProvider` `nameGenerator` as `descriptionNameGenerator`. Impacted concrete implementations: `ActionFlowViewDiagramDescriptionProvider`, `GeneralViewDiagramDescriptionProvider`,  `InterconnectionViewForDefinitionDiagramDescriptionProvider`, `InterconnectionViewForUsageDiagramDescriptionProvider`, `StateTransitionViewDiagramDescriptionProvider`.
  * Rename `syson-diagram-statetransition-view` `CompartmentNodeDescriptionProvider` as `StateTransitionActionsCompartmentNodeDescriptionProvider`.
  * `StateTransitionViewEdgeService` removed, services moved to `ViewEdgeService` and `ViewLabelService`.
  * `StateTransitionActionToolProvider` moved to `syson-diagram-common-view`
  * `StateTransitionCompartmentNodeToolProvider` moved to `syson-diagram-common-view`
  * `createState` and `createOwnedAction` services moved to `ViewToolService`
- https://github.com/eclipse-syson/syson/issues/349[#349] [syson] Switch to sirius-web domain driven design architecture.
Please download your existing SysON projects before moving to this new version.
A reset of the database is needed.
- https://github.com/eclipse-syson/syson/issues/393[#393] [diagrams] Code refactoring: