@@ -61,3 +61,6 @@ The changes are:
 - Add "Show/Hide Icons in Diagrams" action in Diagram Panel, allowing to show/hide icons in the  diagrams (icons are not part of the SysMLv2 specification).
 
 image::release-notes-show-hide-icons-in-diagram.png[Show/Hide Icons in Diagram]
+
+- Add a new tool allowing to create an _ExhibitState_ at the root of General View and StateTransition View.
+This tool shows a dialog allowing to select an existing _State_ to associate to the new _ExhibitState_.
